# FCM-plugin

./: .gitignore  ANDROID_BUILD_GUIDE.md  ANDROID_SETUP_GUIDE.md  Cargo.toml  FIREBASE_SETUP.md  QUICK_START.md  README.md  build-android.bat  build-android.sh  package-lock.json  package.json  quick-android-build.ps1  setup-android-env.ps1  setup-android.md  tauri  tauri.conf.json
android/: build.gradle  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/smooth55dev/fcm/: MainActivity.kt
android/app/src/main/res/values/: themes.xml
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/app/tauri/plugin/fcm/: FcmPlugin.kt  FcmService.kt
ios/: Package.swift
ios/Sources/FcmPlugin/: FcmPlugin.swift
src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
types/: index.d.ts
