[package]
name = "tauri-plugin-fcm"
version = "0.1.0"
description = "Firebase Cloud Messaging plugin for Tauri"
license = "MIT"
repository = "https://github.com/smooth55dev/FCM-plugin"
edition = "2021"
rust-version = "1.60"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tauri = { version = "2.8", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }
