[package]
name = "fcm-example"
version = "0.1.0"
description = "FCM Plugin Example"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.8", features = [] }
tauri-plugin-fcm = { path = "../" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "fcm_example"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "fcm-example"
path = "src/main.rs"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
